<resources>
    <string name="app_name">Cafe Legend</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="application_logo">Application logo</string>
    <string name="home">Home</string>
    <string name="welcome">Welcome,</string>
    <string name="items">Items</string>
    <string name="menu_details">Menu Details</string>
    <string name="find_us">Find Us</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="logout">Logout</string>
    <string name="navigation">Navigation</string>
    <string name="cafe_kopi_legend">CAFE KOPI LEGEND</string>
    <string name="address">Jl. Pagar Alam No.102, Segala Mider, Kec. Tj.\nKarang Bar., Kota Bandar Lampung,\nLampung 35132</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_sed_do_eiusmod_tempor_incididunt_ut_labore_et_dolore_magna_aliqua">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
</resources>