<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    tools:openDrawer="start"
    android:id="@+id/drawerLayout"
    tools:context=".FindUsActivity">

    <!--    Top section    -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <include
                layout="@layout/toolbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/find_us"
                android:textColor="#634848"
                android:paddingTop="8dp"
                android:textSize="35sp"
                android:textStyle="bold"
                android:paddingStart="70dp"/>
        </LinearLayout>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:src="@drawable/logo"
                android:layout_marginTop="15dp"
                />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:paddingVertical="20dp"
            android:orientation="vertical"
            android:background="@drawable/large_pink_rectangle">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/cafe_kopi_legend"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="#634E4E"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/address"
                android:textColor="#372C2C"
                android:layout_marginTop="5dp"
                />

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                app:cardCornerRadius="15dp"
                >
                <ImageView
                    android:layout_width="320dp"
                    android:layout_height="320dp"
                    android:src="@drawable/maps_cropped"
                    android:background="@drawable/pink_border"
                    android:padding="10dp"
                    />
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        app:menu="@menu/side_menu_find_us"
        android:layout_gravity="start"
        android:background="@color/pink"
        app:itemBackground="@color/pink"
        app:drawerLayoutCornerSize="20dp"
        android:layout_margin="10dp"
        />

</androidx.drawerlayout.widget.DrawerLayout>